Trying to change namespace

--- a/composer.json
+++ b/composer.json
@@ -29,9 +29,9 @@
         "doctrine/mongodb-odm-bundle": "dev-master"
     },
     "autoload": {
-        "psr-0": { "FOS\\MessageBundle": "" }
+        "psr-4": { "FOS\\MessageBundle": "" }
     },
-    "target-dir": "FOS/MessageBundle",
+    "target-dir": "",
     "extra": {
         "branch-alias": {
             "dev-master": "1.2-dev"
